# jm-chatbot-frontend

./: Makefile  README.md  docker-compose.yml  imporve.txt  improve.txt  package.json  pnpm-lock.yaml  tailwind.config.ts
backend/: Dockerfile  app.py  callbacks.py  context.py  graph.py  ingest_to_qdrant.py  pyproject.toml  utils.py
data/: prices_2025-06-26.xlsx  prices_2025-07-01.xlsx
qdrant_storage/: raft_state.json
qdrant_storage/collections/prices/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/prices/0/segments/14d4a828-bd31-46e4-a18f-1c8e8dcf1dca/: mutable_id_tracker.mappings
qdrant_storage/collections/prices/0/segments/14d4a828-bd31-46e4-a18f-1c8e8dcf1dca/payload_index/: IDENTITY  LOG  MANIFEST-000013
qdrant_storage/collections/prices/0/segments/283f0ed7-7650-40d9-aa1d-8d1fd8fcdd6c/: mutable_id_tracker.mappings
qdrant_storage/collections/prices/0/segments/283f0ed7-7650-40d9-aa1d-8d1fd8fcdd6c/payload_index/: IDENTITY  LOG  MANIFEST-000013
qdrant_storage/collections/prices/0/segments/2bb19958-1a81-4add-839b-f40b5cfed69c/payload_index/: IDENTITY  LOG  MANIFEST-000013
qdrant_storage/collections/prices/0/segments/63a37d63-30c9-4aef-aea9-eaa763e348eb/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/prices/0/segments/69e596e4-ab79-4744-9c60-58fc234496da/: mutable_id_tracker.mappings
src/app/: layout.tsx  page.tsx
src/components/: ChatbotInterface.tsx  Header.tsx  MarkdownComponents.tsx
src/types/: messages.ts
src/utils/: cleanMarkdown.ts
(+15 files in other folders)
