[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Lucas Hope"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = ">=0.116.0,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
qdrant-client = "1.14.1"
langgraph = ">=0.5.1,<0.6.0"
langchain = ">=0.3.26,<0.4.0"
langchain-community = ">=0.3.27,<0.4.0"
sentence-transformers = ">=5.0.0,<6.0.0"
torch = "==2.2.2"
pandas = ">=2.3.0,<3.0.0"
numpy = "<2.0"
openpyxl = ">=3.1.5,<4.0.0"
langchain-openai = "^0.3.27"
langchain-qdrant = "^0.2.0"
flask = "^3.1.1"
flask-cors = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"